--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -390,6 +390,9 @@
                                    <option value="1">1 Passenger</option>
                                    <option value="2">2 Passengers</option>
                                    <option value="3">3 Passengers</option>
+                                   <option value="4">4 Passengers</option>
+                                   <option value="5">5 Passengers</option>
+                                   <option value="6">6 Passengers</option>
                                </select>
                            </div>
                        </div>
